src/objects/TrialPatient__c.object
<CustomObject>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <description>Formula field to show Institution in related list of trial patient.</description>
        <formula>Patient_Id__r.Institution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRandomized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRandomized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Record_Number__c</fullName>
        <description>This formula field display MRN as a related list of trial patient.</description>
        <formula>Patient_Id__r.Medical_Record_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Record Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Id__c</fullName>
        <label>Patient Name</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>Trial Associations</relationshipLabel>
        <relationshipName>TrialPatients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phase_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase Master</label>
        <referenceTo>Phase_Master__c</referenceTo>
        <relationshipLabel>TrialPatients</relationshipLabel>
        <relationshipName>TrialPatients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RandomizationCalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RandomizationCalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>TrialPatients</relationshipLabel>
        <relationshipName>TrialPatients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Id__c</fullName>
        <label>Subject Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Name</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>TrialPatients</relationshipLabel>
        <relationshipName>TrialPatients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_new_patient_id__c</fullName>
        <label>pg_new_patient_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_patient_Id__c</fullName>
        <label>pg_patient_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_patient_id_int__c</fullName>
        <formula>VALUE(pg_patient_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pg_patient_id_int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TrialPatient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Subject_Id__c</columns>
        <columns>Trial_Id__c</columns>
        <columns>Site__c</columns>
        <columns>Patient_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>migrated_delta</fullName>
        <columns>NAME</columns>
        <columns>pg_new_patient_id__c</columns>
        <columns>pg_patient_Id__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Patient_Id__c</columns>
        <columns>Trial_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pg_patient_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/15/2013 12:00 AM</value>
        </filters>
        <label>migrated_delta</label>
    </listViews>
    <listViews>
        <fullName>migrated_full</fullName>
        <columns>NAME</columns>
        <columns>pg_new_patient_id__c</columns>
        <columns>pg_patient_Id__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Patient_Id__c</columns>
        <columns>Trial_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pg_patient_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/31/2013 12:00 AM</value>
        </filters>
        <label>migrated_full</label>
    </listViews>
    <nameField>
        <label>Record Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TrialPatients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>